--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,14 @@
 # Site settings
 title: TableBooks Pro
 description: A professional website for TableBooks
-baseurl: "/tablebooks.pro"  # Matches your repo name
-url: "https://tablebookspro.github.io"  # Your GitHub Pages URL
+url: "https://tablebookspro.github.io"
+baseurl: "/tablebooks.pro"
+logo: "/assets/images/logo.svg"
+social:
+  twitter: "https://twitter.com/tablebooks"
+  facebook: "https://facebook.com/tablebooks"
+email: "contact@tablebooks.pro"
+phone: "+1-555-123-4567"
 
 # Build settings
 markdown: kramdown
@@ -14,11 +20,3 @@ plugins:
 exclude:
   - Gemfile
   - Gemfile.lock
-  - node_modules
-  - vendor
-
-# Social Links
-social_links:
-  twitter: https://twitter.com/yourprofile
-  facebook: https://facebook.com/yourprofile
-  instagram: https://instagram.com/yourprofile
