--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,5 +1,5 @@
 items:
-  - name: LinkedIn
+  - name: TikTok
     url: "https://www.linkedin.com/company/example"
     icon: linkedin
   - name: Facebook
