--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -15,6 +15,9 @@ items:
   - name: About
     url: "/about"
     title: "About Us"
+  - name: Blog
+    url: "https://tablebookspro.substack.com/"
+    title: "Blog"
   - name: Contact
     url: "/contact"
     title: "Contact Us"
