--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,7 +1,7 @@
 items:
   - name: TikTok
     url: "https://www.linkedin.com/company/example"
-    icon: linkedin
+    icon: tiktok
   - name: Facebook
     url: "https://www.facebook.com/tablebookspro/"
     icon: facebook
