--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,6 +1,6 @@
 items:
   - name: TikTok
-    url: "https://www.linkedin.com/company/example"
+    url: "https://www.tiktok.com/@tablebookspro"
     icon: tiktok
   - name: Facebook
     url: "https://www.facebook.com/tablebookspro/"
