--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 title: TABLE books pro
-description: "Independent publisher of unique table books, chapbooks, and more."
+description: "Table books pro ia an independent publisher of unique table books, slim volumes, and more. Better Coffee Table Books."
 baseurl: "/tablebooks.pro"
 url: "https://tablebookspro.github.io"
 markdown: kramdown
