--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 title: TABLE books pro
-description: "Table books pro ia an independent publisher of unique table books, slim volumes, and more. Better Coffee Table Books. "
+description: "Table books pro is an independent publisher of unique table books, slim volumes, and more. Better Coffee Table Books."
 baseurl: "/tablebooks.pro"
 url: "https://tablebooks.pro"
 markdown: kramdown
