--- a/_data/symbols.yml
+++ b/_data/symbols.yml
@@ -130,3 +130,8 @@
     <symbol id="substack" viewBox="0 0 64 64">
       <path d="M60 14.416H4v7.564h56v-7.564M4 28.832V64l28-15.704L60 64V28.832M60 0H4v7.56h56z"/>
     </symbol>
+- id: x
+  content: |
+    <symbol id="x" viewBox="0 0 64 64">
+      <path d="M50.4 3h9.816l-21.44 24.568L64 61h-19.748l-15.468-20.28-17.7 20.28H1.264l22.932-26.28L0 3h20.252l13.98 18.532L50.401 3Zm-3.44 52.112h5.44L17.292 8.58H11.46z"/>
+    </symbol>
