--- a/_data/social.yml
+++ b/_data/social.yml
@@ -8,7 +8,7 @@ items:
   - name: Instagram
     url: "https://www.instagram.com/tablebookspro/"
     icon: instagram
-  - name: X
+  - name: X.com
     url: "https://x.com/TableBookspro"
     icon: x
   - name: Substack
