--- a/config.yml
+++ b/config.yml
@@ -20,6 +20,12 @@ plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
 
+# Plugins
+gems:
+  - jekyll-seo-tag
+  - jekyll-feed
+  - jekyll-sitemap
+
 # Exclude files
 exclude:
   - README.md
