--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "TABLE books pro"
-description: "Table books pro is an independent publisher of unique table books, slim volumes, and more. Better Coffee Table Books."
+description: "TABLE books pro is an independent publisher of unique table books, slim volumes, and more. Utterly unique Coffee Table Books at the right price, we've got 'em."
 url: "https://tablebooks.pro"
 baseurl: ""
 email: "tablebookspro@protonmail.com"
