--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "TABLE books pro"
-description: "TABLE books pro is an independent publisher of edge-printed table books, gorgeous slim volumes, unique mongraphs, and more. Books Imbued With Meaning."
+description: "TABLE books pro is an independent publisher of edge-printed table books, gorgeous slim volumes, unique mongraphs, and more. We live by the ethos that the things that decorate our tables and booksheles should be: Imbued With Meaning.<br> Our expanding catalog contains Bitcoin Coffee Table Book, American Coffee Table Book and more."
 url: "https://tablebooks.pro"
 baseurl: ""
 email: "tablebookspro@protonmail.com"
