--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "TABLE books pro"
-description: "TABLE books pro is an independent publisher of edge-printed coffee table books, slim volumes, and unique monographs. The things that decorate our tables and bookshelves should be beautiful and meaningfully imbued with meaning.<br><br>Our ever-expanding catalogue currently contains Bitcoin Coffee Table Book and SUN by D.H. Lawrence. American Coffee Table Book is coming soon and can be pre-ordered online thru book retailers worldwide."
+description: "TABLE books pro is an independent publisher of edge-printed coffee table books, slim volumes, and unique monographs. The books that decorate our tables and bookshelves should be beautiful and imbued with meaning.<br><br>Our ever-expanding catalogue currently contains Bitcoin Coffee Table Book and SUN by D.H. Lawrence. American Coffee Table Book is coming soon and can be pre-ordered online thru book retailers worldwide."
 url: "https://tablebooks.pro"
 baseurl: ""
 email: "tablebookspro@protonmail.com"
