--- a/_data/social.yml
+++ b/_data/social.yml
@@ -14,3 +14,6 @@ items:
   - name: Substack
     url: "https://tablebookspro.substack.com/"
     icon: substack
+  - name: Goodreads
+    url: "https://tablebookspro.substack.com/"
+    icon: goodreads
