--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ email: "tablebookspro@protonmail.com"
 lang: "en-US"
 timezone: "America/New_York"
 date_format: "%b %-d, %Y"
-about: "My name is Eric Freeburg. I am a thirty-eight year old American based out of Wilton, Connecticut. A few years ago, I noticed a distinct lack of meaningful and holistic designs coming out of the coffee table book industry. So I decided to chane that.<br><br> TABLE books pro began by publishing the Bitcoin Coffee Table Book but has since expanded into more offerings. Our guiding principle is that you <strong>should</strong> judge a book by it's cover. "
+about: "My name is Eric Freeburg. I am a thirty-eight year old American based out of Wilton, Connecticut. A few years ago, I noticed a distinct lack of meaningful and holistic designs coming out of the coffee table book industry. So I decided to change that.<br><br> TABLE books pro began by publishing the Bitcoin Coffee Table Book but has since expanded into more offerings. Our guiding principle is that you <strong>should</strong> judge a book by it's cover. "
 
 # SEO, OG, Etc.
 jekyll-seo-tag:
