--- a/_data/social.yml
+++ b/_data/social.yml
@@ -9,7 +9,7 @@ items:
     url: "https://www.instagram.com/tablebookspro/"
     icon: instagram
   - name: Goodreads
-    url: "https://tablebookspro.substack.com/"
+    url: "https://www.goodreads.com/author/show/29882530.Eric_Freeburg"
     icon: goodreads
   - name: X.com
     url: "https://x.com/TableBookspro"
